# sdui

./: Cargo.toml  LICENSE  README.md  build.rs
assets/: icon.rc
src/: app.rs  main.rs
