[package]
name = "sdui_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
pyke-diffusers = "*"
eframe = "*"
egui_extras = { version = "*", features = ["image"] }
image = { version = "*", default-features = false, features = ["png"] }
rand = "*"
rfd = "*"
simple-message-box = "*"

[build-dependencies]
embed-resource = "*"